# crypto-young-nft

./: .gitignore  README.md
contract/: arguments.ts  hardhat.config.ts  package.json  tsconfig.json
contract/deploy/: 001_deploy.ts
contract/test/: chai-setup.ts
resource/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+48 more)
tools/: config.py  log.py  pyproject.toml  tool.py
tools/example/: example.json  web.json
tools/img/: 0.json  1.json  2.json
vue-color-avatar/: index.html
vue-color-avatar/api/: index.js
vue-color-avatar/landing-page/: landing-page.html
vue-color-avatar/src/: App.vue
vue-color-avatar/src/enums/: index.ts
vue-color-avatar/src/layouts/: Footer.vue  Header.vue
vue-color-avatar/src/utils/: dynamic-data.ts
